--- a/index.html
+++ b/index.html
@@ -43,21 +43,24 @@
     <section id="tab2" class="tab-content" role="tabpanel">
       <div id="sketch-container-sk2" class="sketch-container"></div>
       <div id="sketch-drawing-sk2" class="sketch-evolution">
-        <!-- Project narrative template: replace the text below with your own narrative -->
         <div class="sketch-narrative" aria-labelledby="sk2-narrative-title">
-          <h3 id="sk2-narrative-title">Sketch narrative (replace this and add to the other two sketches!)</h3>
-          <p class="small-note">Replace this entire block with your own text when submitting.</p>
+          <h3 id="sk2-narrative-title">Sketch A: Layered Orbit Clock</h3>
           <p>
-            Context: Briefly describe the situation or user need this sketch addresses. For example,
-            "This sketch visualizes sunrise/sunset behavior for a simple teaching demo on coordinate
-            systems and interaction." Keep it short — 1–2 sentences.
+            This clock explores time as an expressive design object using simple shapes and motion instead of numbers.
+            It supports quick “glanceable” reading while keeping the interface playful and memorable.
           <ul>
-            <li><strong>Context:</strong> Who is this for? In what context will it be used? (e.g., mountain, pomodoro,
-              running, cooking, breathing?)</li>
-            <li><strong>Design decisions:</strong> Explain 2–3 key choices you made (layout, color, interaction) and why
-              you made them. Use plain language and reference any constraints (time, accessibility,
-              or target device).</li>
-            <li><strong>Future work:</strong> 1–2 ideas for improvements or extensions.</li>
+            <li><strong>Context:</strong>
+              A personal artifact such as a wearable piece, desktop object, or ambient display where visual style matters alongside functionality.</li>
+            <li><strong>Design decisions:</strong>
+              Hours are encoded as a 12-slot indicator that fills cumulatively (e.g., 3 PM fills three slots),
+              shifting the hour reading from a moving hand to a discrete “progress” structure.
+              To create a stronger visual identity, the 3/6/9 positions are triangles instead of circles,
+              adding a graphic rhythm while preserving readability.
+              Minutes are shown as a continuous arc to convey flow through the hour,
+              and seconds are an orbiting dot to keep the clock feeling alive.
+              Hover reveals the exact digital time for precision without clutter.</li>
+            <li><strong>Future work:</strong>
+              I want to refine color contrast for accessibility and explore a mode that visually distinguishes AM vs. PM without adding numbers.</li>
           </ul>
           </p>
         </div>
@@ -79,14 +82,85 @@
       </div>
     </section>
 
-    <!-- Homework 4: Sketch 1 -->
+    <!-- Homework 4: Sketch 2 -->
     <section id="tab3" class="tab-content" role="tabpanel">
       <div id="sketch-container-sk3" class="sketch-container"></div>
+      <div id="sketch-drawing-sk3" class="sketch-evolution">
+        <div class="sketch-narrative" aria-labelledby="sk3-narrative-title">
+          <h3 id="sk2-narrative-title">Sketch B: Chained Hands</h3>
+          <p>
+            This sketch reinterprets the familiar clock hand metaphor by treating time units as physically connected rather than independent.
+            The design emphasizes relationships between hours, minutes, and seconds instead of isolating them.
+          <ul>
+            <li><strong>Context:</strong>
+              This clock is imagined as a small sculptural object for a desk or wall, where users can appreciate motion and form over time.</li>
+            <li><strong>Design decisions:</strong>
+              The minute hand begins at the end of the hour hand, and the second hand begins at the end of the minute hand,
+              forming a chained structure that visually encodes hierarchy and dependency.
+              Visual hierarchy is reinforced using stroke weight and color.
+              Hover interaction highlights each segment and labels its role, supporting understanding without cluttering the display.</li>
+            <li><strong>Future work:</strong>
+              Future versions could experiment with smoother motion transitions or subtle trails to emphasize temporal flow.</li>
+          </ul>
+          </p>
+        </div>
+
+        <h3>Sketch evolution</h3>
+        <p class="small-note">Replace <b>these images</b> with your own sketch evolution images.</p>
+        <figure>
+          <!-- <img src="images/sk3-evolution-1.png" alt="Sketch #A - step 1" /> -->
+          <figcaption>Step 1 — initial layout and annotated design decisions</figcaption>
+        </figure>
+        <figure>
+          <!-- <img src="images/sk3-evolution-2.png" alt="Sketch #A - step 2" /> -->
+          <figcaption>Step 2 — second layout after peer feedback</figcaption>
+        </figure>
+        <figure>
+          <!-- <img src="images/sk3-evolution-3.png" alt="Sketch #A - step 3" /> -->
+          <figcaption>Step 3 — refined visuals and annotations</figcaption>
+        </figure>
+      </div>
     </section>
 
-    <!-- Homework 4: Sketch 1 -->
+    <!-- Homework 4: Sketch 3 -->
     <section id="tab4" class="tab-content" role="tabpanel">
       <div id="sketch-container-sk4" class="sketch-container"></div>
+      <div id="sketch-drawing-sk4" class="sketch-evolution">
+        <div class="sketch-narrative" aria-labelledby="sk4-narrative-title">
+          <h3 id="sk4-narrative-title">Sketch C: Accumulated Day Clock</h3>
+          <p>
+            This sketch explores time as both continuous flow and accumulation, 
+            representing not only the current moment but also how a day builds up over time.
+          <ul>
+            <li><strong>Context:</strong>
+              This clock is designed for ambient or desktop use in work or study environments,
+              where users benefit from awareness of both the present time and overall daily progress.</li>
+            <li><strong>Design decisions:</strong>
+              Minutes and seconds share a single outer ring, 
+              with minutes shown as a progress arc and seconds as a moving dot, reinforcing a unified sense of flow.
+              Hours are encoded as thin concentric rings that accumulate up to 24, making the passage of the day visible.
+              Stroke weight establishes hierarchy, with hours as structure and minute/second as active motion.</li>
+            <li><strong>Future work:</strong>
+               Future iterations could visually differentiate AM and PM or extend the design to include a subtle date-based layer.</li>
+          </ul>
+          </p>
+        </div>
+
+        <h3>Sketch evolution</h3>
+        <p class="small-note">Replace <b>these images</b> with your own sketch evolution images.</p>
+        <figure>
+          <!-- <img src="images/sk4-evolution-1.png" alt="Sketch #A - step 1" /> -->
+          <figcaption>Step 1 — initial layout and annotated design decisions</figcaption>
+        </figure>
+        <figure>
+          <!-- <img src="images/sk4-evolution-2.png" alt="Sketch #A - step 2" /> -->
+          <figcaption>Step 2 — second layout after peer feedback</figcaption>
+        </figure>
+        <figure>
+          <!-- <img src="images/sk4-evolution-3.png" alt="Sketch #A - step 3" /> -->
+          <figcaption>Step 3 — refined visuals and annotations</figcaption>
+        </figure>
+      </div>
     </section>
 
 
