Sketch C: add hover interatcion

--- a/index.html
+++ b/index.html
@@ -139,7 +139,8 @@
               Minutes and seconds share a single outer ring, 
               with minutes shown as a progress arc and seconds as a moving dot, reinforcing a unified sense of flow.
               Hours are encoded as thin concentric rings that accumulate up to 24, making the passage of the day visible.
-              Stroke weight establishes hierarchy, with hours as structure and minute/second as active motion.</li>
+              Stroke weight establishes hierarchy, with hours as structure and minute/second as active motion.
+              Hover reveals exact digital time for precision. </li>
             <li><strong>Future work:</strong>
                Future iterations could visually differentiate AM and PM or extend the design to include a subtle date-based layer.</li>
           </ul>
